Upgrading to Jupiter tests for everything but plugins